spec/invalid-syntax-examples/duplicate-term-definitions.bowtie
a : Int
a =
  0

a : Int
a =
  1
